# lms-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build_mac_pyinstaller.sh  convert_single_video.py  install.sh  pyproject.toml  requirements.txt  run.sh  spec.md
.cursor/rules/: simple-project-rules.mdc
src/: __init__.py  auto_watch.py  main.py
src/audio_pipeline/: converter.py  pipeline.py  transcriber.py
src/auto_watch/: __main__.py  browser.py  cli.py  config.py  courses.py  exceptions.py  main.py  player.py  transcription.py  types.py
src/auto_watch/providers/: kcu.py  ssu.py
src/gui/: main.py
src/gui/config/: constants.py
src/gui/core/: file_manager.py
src/gui/ui/components/: buttons.py  input_field.py  log_area.py
src/gui/ui/windows/: main_window.py
src/gui/workers/: processing_worker.py
src/summarize_pipeline/: summarizer.py
src/video_pipeline/: pipeline.py  video_parser.py
