[project]
name = "lms-summarizer"
version = "1.0.0"
description = "숭실대 LMS 자동 수강 처리 + 스크립트 추출 CLI"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "faster-whisper>=1.1.0",
    "pydantic>=2.11.0",
    "openai>=1.84.0",
    "google-genai>=1.0.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
lms = "src.auto_watch.main:cli_entry"

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
